refactor: Remove supplier from api and authentication
